[gd_scene load_steps=3 format=3 uid="uid://2eyhy1p2h3n1"]

[ext_resource type="Script" uid="uid://30g7ngs8qgpj" path="res://GameData/UIScenes/GUI/Scripts/mod_draggable.gd" id="1_nyg7q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eql1v"]
size = Vector2(32, 32)

[node name="InventoryDraggable" type="Node2D" groups=["droppable"]]
script = ExtResource("1_nyg7q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-16, -16)
offset = Vector2(16, 16)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-16, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_eql1v")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
